2003-07-21  John Levon  <levon@movementarian.org>

	* gui/oprof_start.cpp: select "No event" when switching counter
	if needed

2003-07-21  John Levon  <levon@movementarian.org>

	* gui/oprof_start.cpp: fix default event choosing when
	daemonrc exists

2003-07-21  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp: thinko in has_unique_event(), don't warn for
	  no counter with CPU_TIMER_INT

2003-07-21  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp: allow to de-select a counter

2003-07-21  John Levon  <levon@movementarian.org>

	* gui/oprof_start.cpp:
	* gui/oprof_start_util.h:
	* gui/oprof_start_util.cpp: remove uptime pretty printing.
	It's broken for 2.5 and ugly code

2003-07-21  John Levon  <levon@movementarian.org>

	* gui/oprof_start.h:
	* gui/oprof_start.cpp: use a default event if no
	events are set yet

2003-07-20  Philippe Elie  <phil.el@wanadoo.fr>

	* m4/compileroption.m4: fix for autoconf 2.13

2003-07-19  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp:
	* libpp/format_output.cpp:
	* libpp/format_output.h:
	* pp/opannotate.cpp:
	* pp/opreport_options.cpp: minor tidy

2003-07-19  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp: RTC mode was not working

2003-07-16  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start_config.h:
	* gui/oprof_start_config.cpp: remove dead code, fix kernel_only read

2003-07-16  John Levon  <levon@movementarian.org>

	* utils/opcontrol: fix typo that was partly breaking
	CPU_TIMER_INT

2003-07-16  John Levon  <levon@movementarian.org>

	* gui/oprof_start.h:
	* gui/oprof_start.cpp: fixes for CPU_TIMER_INT

2003-07-16  John Levon  <levon@movementarian.org>

	* gui/ui/oprof_start.base.ui: remove add/remove event buttons,
	fix resize weirdness

	* gui/oprof_start.h:
	* gui/oprof_start.cpp: remove add/remove event buttons, allow
	short-form event descriptions

2003-07-15  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/persistent_config.h: remove
	* gui/oprof_start.h: